Fix full width first row spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1889,32 +1889,30 @@ footer .site-info {
 	float: none;
 }
 
-.page-template-page-full-no-title-php {
-	#content {
-		width: auto;
-		float: none;
-	}
+.page-template-page-full-no-title {
 
 	#masthead {
-		margin-bottom: 25px;
+		margin-bottom: 25px; 
+	}
+
+	#content {
+		float: none;
+		width: auto;
 	}
 
 	.content-container {
 		margin-top: 0;
 	}
 
-	&.no-title-page-title {
-		#masthead {
-			margin-bottom: 0;
-		}
-
-		.content-container {
-			margin-top: 25px;
-		}
+	#single-header {
+		margin-top: -25px;
+		margin-bottom: 25px; 
 	}
+
 }
 
-#nav-below, #posts-nav {
+#nav-below, 
+#posts-nav {
 	height: 1em;
 	line-height: 1;
 	margin-top: 20px;
